added script from bootstrap to end of body of index file

--- a/style.css
+++ b/style.css
@@ -1,1 +1,19 @@
+body {
+    background-color: rgb(232,232,232);
+}
 
+a.navbar-brand {
+    margin-left: 10px;
+    padding: 8px;
+    background-color: #00B182;
+    color: #F0F8FF;
+    font-family: Georgia, Times, serif;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+p.col-md-8 {
+  font-size: 1.5em;
+  margin-left: 2em;
+  margin-right: 2em;
+}
