--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+body {
+  background-color: #DCDCDC;
+}
+
 a.navbar-brand {
   color: #F0FFFF !important;
   background-color: #8A2BE2;
   padding: 10px;
+}
+
+.container {
+  background-color: #DCDCDC;
 }
