--- a/style.css
+++ b/style.css
@@ -12,13 +12,25 @@ a.navbar-brand {
   padding: 3mm;
 }
 
+.container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+/* .flex-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+} */
+
 /* Summary box style in order of html code*/
 .box-summary {
   background-color: white;
-  margin-left: 2.5em;
-  margin-right: 2.5em;
-  margin-top: 2.5em;
-  margin-bottom: 2.5em;
+  margin-left: 2em;
+  margin-right: 2em;
+  margin-top: 2em;
+  margin-bottom: 2em;
   padding: 4mm;
 }
 
@@ -45,7 +57,7 @@ h3  {
 /* Visual box style */
 .visual-summary {
   background-color: white;
-  margin-top: 2.5em;
+  margin-top: 2em;
   padding: 4mm;
 }
 
